CMAKE_MINIMUM_REQUIRED(VERSION 3.13)
PROJECT(DeveloperZone)

FIND_PACKAGE (OpenMP)    
# Should we build shared libraries
OPTION(BUILD_SHARED_LIBS "Build shared libraries" ON)

IF (APPLE)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -mmacosx-version-min=10.6 -O3 -g -fpermissive -m64 " CACHE STRING "flags used during compilation by C++ compiler" FORCE)
    SET(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -mmacosx-version-min=10.6 -O3 -g -fpermissive -m64 " CACHE STRING "flags used during compilation by C compiler" FORCE)
    SET(CMAKE_OSX_DEPLOYMENT_TARGET "10.9" CACHE STRING "OSX deplyment target" FORCE)

    MESSAGE ("GOT APPLE")
ENDIF (APPLE)


set(CMAKE_CXX_STANDARD 11)

# Specify a version for all libs to use
# Specify a version for all libs to use
# letters A, B, C are added to ensure nice display of sersion in cmake gui
SET (COMPUCELL3D_A_MAJOR_VERSION "4" CACHE STRING "Major Version")
SET (COMPUCELL3D_B_MINOR_VERSION "0" CACHE STRING "Minor Version")
SET (COMPUCELL3D_C_BUILD_VERSION "0" CACHE STRING "Build Version")
# and here we assign them back to what they shuld be
SET (COMPUCELL3D_MAJOR_VERSION ${COMPUCELL3D_A_MAJOR_VERSION})
SET (COMPUCELL3D_MINOR_VERSION ${COMPUCELL3D_B_MINOR_VERSION})
SET (COMPUCELL3D_BUILD_VERSION ${COMPUCELL3D_C_BUILD_VERSION})

SET(COMPUCELL3D_LIBRARY_PROPERTIES ${COMPUCELL3D_LIBRARY_PROPERTIES}
  VERSION "${COMPUCELL3D_VERSION}"
  SOVERSION "${COMPUCELL3D_MAJOR_VERSION}.${COMPUCELL3D_MINOR_VERSION}" )


SET(COMPUCELL3D_INSTALL_PATH CACHE PATH "CompuCell3D installation path")
SET(COMPUCELL3D_FULL_SOURCE_PATH CACHE PATH "CompuCell3D source code path ")

SET(COMPUCELL3D_INSTALL_LIB_DIR ${COMPUCELL3D_INSTALL_PATH}/lib/site-packages/cc3d/cpp/lib)
SET(COMPUCELL3D_INCLUDE_PATH ${COMPUCELL3D_INSTALL_PATH}/include/CompuCell3D)
SET(COMPUCELL3D_LIBRARY_PATH ${COMPUCELL3D_INSTALL_PATH}/lib)

SET(COMPUCELL3D_INSTALL_PLUGIN_DIR " lib/site-packages/cc3d/cpp/CompuCell3DPlugins")
SET(COMPUCELL3D_INSTALL_STEPPABLE_DIR " lib/site-packages/cc3d/cpp/CompuCell3DSteppables")


LINK_DIRECTORIES(${COMPUCELL3D_LIBRARY_PATH} ${COMPUCELL3D_INSTALL_LIB_DIR})
SET(CC3DLibraries CC3DCompuCellLib CC3DBoundary CC3DBasicUtils CC3DField3D CC3DPublicUtilities CC3DUnits CC3DXMLUtils CC3DmuParser)
SET(STEPPABLE_DEPENDENCIES ${CC3DLibraries})
SET(PLUGIN_DEPENDENCIES ${CC3DLibraries})

MESSAGE("CC3DLibraries=${CC3DLibraries}")

MESSAGE("THIS IS COMPUCELL3D_INCLUDE_PATH=$ {COMPUCELL3D_INCLUDE_PATH}")
# Always include the top level source for compiles
SET_DIRECTORY_PROPERTIES(PROPERTIES
  INCLUDE_DIRECTORIES ${COMPUCELL3D_INCLUDE_PATH})

include(developer_zone_macros.cmake)


# ADD YOUR SUBPROJECTS HERE
#AutogeneratedModules - DO NOT REMOVE THIS LINE IT IS USED BY TWEDIT TO INSERT NEW PLUGIN DIRECTORY
ADD_SUBDIRECTORY(CustomCellAttributeSteppable)
ADD_SUBDIRECTORY(HeterotypicBoundaryLength)
ADD_SUBDIRECTORY(GrowthSteppable)


add_subdirectory(SimpleVolume)
add_subdirectory(VolumeMean)
add_subdirectory(pyinterface)
