
ADD_SUBDIRECTORY(Logger)
ADD_SUBDIRECTORY(Utils)
ADD_SUBDIRECTORY(PublicUtilities)
ADD_SUBDIRECTORY(XMLUtils)
ADD_SUBDIRECTORY(muParser)
# ADD_SUBDIRECTORY(Cleaver)
ADD_SUBDIRECTORY(CompuCell3D)

IF(BUILD_PYINTERFACE)
    ADD_SUBDIRECTORY(pyinterface)
ENDIF(BUILD_PYINTERFACE)

ADD_SUBDIRECTORY(post_install_tasks)
